--- a/src/style.css
+++ b/src/style.css
@@ -562,14 +562,6 @@ video {
   top: 0.5rem;
 }
 
-.top-3 {
-  top: 0.75rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -583,10 +575,6 @@ video {
   display: block;
 }
 
-.inline-block {
-  display: inline-block;
-}
-
 .flex {
   display: flex;
 }
@@ -595,12 +583,12 @@ video {
   display: none;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .max-h-\[100px\] {
   max-height: 100px;
+}
+
+.max-h-\[50px\] {
+  max-height: 50px;
 }
 
 .max-h-\[90px\] {
@@ -611,20 +599,16 @@ video {
   max-height: 100vh;
 }
 
-.max-h-\[50px\] {
-  max-height: 50px;
-}
-
 .min-h-\[100px\] {
   min-height: 100px;
 }
 
-.min-h-screen {
-  min-height: 100vh;
-}
-
 .min-h-\[50px\] {
   min-height: 50px;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-1\/2 {
@@ -689,11 +673,6 @@ video {
   gap: 1rem;
 }
 
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -735,11 +714,6 @@ video {
 
 .border-b {
   border-bottom-width: 1px;
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-gray-200 {
@@ -788,6 +762,11 @@ video {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
+.bg-neutral-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
+}
+
 .bg-slate-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
@@ -810,21 +789,6 @@ video {
 .bg-yellow-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-neutral-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 82 82 / var(--tw-bg-opacity));
-}
-
-.bg-neutral-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -939,6 +903,14 @@ video {
 
 .line-through {
   text-decoration-line: line-through;
+}
+
+.accent-orange-400 {
+  accent-color: #fb923c;
+}
+
+.accent-orange-300 {
+  accent-color: #fdba74;
 }
 
 .shadow-md {
